--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container container__header">
         <a href="./index.html" lang="en" class="logo"
           ><span class="logo-color">Web</span>Studio</a
@@ -58,13 +58,15 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="hero">
-        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+         <div class="hero_active">
+          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="hero__button button" data-modal-open>
           Заказать услугу
         </button>
+            </div>
       </section>
       <section class="section">
         <div class="container">
@@ -72,7 +74,7 @@
           <ul class="about-list">
             <li class="about-list__item">
               <div class="about-list__box">
-                <svg width="70" height="70">
+                <svg width="70" height="70" >
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -127,19 +129,22 @@
           <ul class="projects-list">
             <li class="projects-list__item">
               <div class="projects-list__wrap">
-                <img src="./images/box1.jpg" alt="markup" width="370" />
+                <img srcset="./images/box1.jpg 1x, ./images/box1-desktop-2x.jpg 2x"
+                src="./images/box1.jpg" alt="markup" width="370" />
                 <p class="projects-list__imgtext">Десктопные приложения</p>
               </div>
             </li>
             <li class="projects-list__item">
               <div class="projects-list__wrap">
-                <img src="./images/box2.jpg" alt="app design" width="370" />
+                <img srcset="./images/box2.jpg 1x, ./images/box2-desktop-2x.jpg 2x" 
+                src="./images/box2.jpg" alt="app design" width="370" />
                 <p class="projects-list__imgtext">Мобильные приложения</p>
               </div>
             </li>
             <li class="projects-list__item">
               <div class="projects-list__wrap">
-                <img src="./images/box3.jpg" alt="design" width="370" />
+                <img srcset="./images/box3.jpg 1x, ./images/box3-desktop-2x.jpg 2x" 
+                src="./images/box3.jpg" alt="design" width="370" />
                 <p class="projects-list__imgtext">Дизайнерские решения</p>
               </div>
             </li>
@@ -151,12 +156,11 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list__item">
-              <img
+              <img class="team-list_icon"
+              srcset="./images/demianenko.jpg 1x, ./images/demianenko-desktop-2x.jpg 2x "
                 src="./images/demianenko.jpg"
                 alt="Product Designer"
-                width="270"
-                height="260"
-              />
+               />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Игорь Демьяненко</h3>
                 <p lang="en" class="team-list__text">Product Designer</p>
@@ -205,12 +209,11 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img
+              <img class="team-list_icon"
+              srcset="./images/repina.jpg 1x, ./images/repina-desktop-2x.jpg 2x "
                 src="./images/repina.jpg"
                 alt="Frontend Developer"
-                width="270"
-                height="260"
-              />
+                  />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Ольга Репина</h3>
                 <p lang="en" class="team-list__text">Frontend Developer</p>
@@ -259,12 +262,11 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img
+              <img class="team-list_icon"
+              srcset="./images/tarasov.jpg 1x, ./images/tarasov-desktop-2x.jpg 2x"
                 src="./images/tarasov.jpg"
                 alt="Marketing"
-                width="270"
-                height="260"
-              />
+                              />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Николай Тарасов</h3>
                 <p lang="en" class="team-list__text">Marketing</p>
@@ -313,12 +315,11 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img
+              <img class="team-list_icon"
+              srcset="./images/yermakov.jpg 1x, ./images/yermakov-desktop-2x.jpg 2x "
                 src="./images/yermakov.jpg"
                 alt="UI Designer"
-                width="270"
-                height="260"
-              />
+                  />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Михаил Ермаков</h3>
                 <p lang="en" class="team-list__text">UI Designer</p>
@@ -500,7 +501,7 @@
         </form>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close"
          data-modal-close>
@@ -591,6 +592,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
