--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container container__header">
         <a href="./index.html" lang="en" class="logo"><span class="logo-color">Web</span>Studio</a>
         <nav class="site-nav">
@@ -48,7 +48,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="section">
         <div class="container">
@@ -81,11 +81,10 @@
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
                   <img
+                  srcset="./images/technokriak.jpg 1x, ./images/project1-desktop-2x.jpg 2x"
                     src="./images/technokriak.jpg"
                     alt="Laptop"
-                    width="370"
-                    height="294"
-                  />
+                    />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -101,7 +100,9 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/posterneworlean.jpg" alt="Basketball players poster" width="370" height="294" />
+                  <img 
+                  srcset="./images/posterneworlean.jpg 1x, ./images/project2-desktop-2x.jpg 2x"
+                  src="./images/posterneworlean.jpg" alt="Basketball players poster" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -120,7 +121,7 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/seafood.jpg" alt="Restaurant Seafood Logo" width="370" height="294" />
+                  <img srcset="./images/seafood.jpg 1x, ./images/project3-desktop-2x.jpg 2x" src="./images/seafood.jpg" alt="Restaurant Seafood Logo" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -139,7 +140,8 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/projectprime.jpg" alt="Black Headphones" width="370" height="294" />
+                  <img srcset="./images/projectprime.jpg 1x, ./images/project4-desktop-2x.jpg 2x"
+                  src="./images/projectprime.jpg" alt="Black Headphones" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -158,7 +160,7 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/projectboxes.jpg" alt="Two cardboard boxes" width="370" height="294" />
+                  <img srcset="./images/projectboxes.jpg 1x, ./images/project5-desktop-2x.jpg 2x" src="./images/projectboxes.jpg" alt="Two cardboard boxes" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -177,7 +179,7 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/inspirationhasnoborders.jpg" alt="PC monitor" width="370" height="294" />
+                  <img srcset="./images/inspirationhasnoborders.jpg 1x, ./images/project6-desktop-2x.jpg 2x" src="./images/inspirationhasnoborders.jpg" alt="PC monitor" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -195,7 +197,7 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/limitededition.jpg" alt="Opened book" width="370" height="294" />
+                  <img srcset="./images/limitededition.jpg 1x, ./images/project7-desktop-2x.jpg 2x" src="./images/limitededition.jpg" alt="Opened book" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -214,7 +216,7 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                    <img src="./images/projectlab.jpg" alt="Label tag" width="370" height="294" />
+                    <img srcset="./images/projectlab.jpg 1x, ./images/project8-desktop-2x.jpg 2x" src="./images/projectlab.jpg" alt="Label tag" />
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -233,7 +235,7 @@
             <li class="examples-item">
               <a href="#" class="examples-item__link link">
                 <div class="examples-item__wrap">
-                  <img src="./images/growingbusiness.jpg" alt="Hands on keyboard" width="370" height="294" />
+                  <img srcset="./images/growingbusiness.jpg 1x, ./images/project9-desktop-2x.jpg 2x" src="./images/growingbusiness.jpg" alt="Hands on keyboard"/>
                   <p class="examples-item__imgtext">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -251,7 +253,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-wrap">
         <div class="footer-contacts">
           <a href="./index.html" lang="en" class="footer-contacts__logo"><span class="logo-color">Web</span>Studio</a>
@@ -316,6 +318,6 @@
           </div>
         </form>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
