--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container container__header">
         <a href="./index.html" lang="en" class="logo"
           ><span class="logo-color">Web</span>Studio</a
         >
         <nav class="site-nav">
-          <ul class="nav-list">
+          <button type="button" class="nav-btn is-open">
+            <svg width="40px" height="40px" aria-label="mobile menu switch">
+              <use class="icon-cross" href="images/icons.svg#close-cross"></use>
+              <use class="icon-menu" href="images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
+          <!-- <ul class="nav-list">
             <li class="nav-list__item">
               <a
                 href="./index.html"
@@ -56,9 +62,9 @@
                 <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
             >
           </li>
-        </ul>
+        </ul> -->
       </div>
-    </header> -->
+    </header>
     <main>
       <section class="hero">
          <div class="hero_active">
@@ -70,7 +76,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="visually-hidden">Особенности</h2>
+          <h2 class="visually-hidden about-title">Особенности</h2>
           <ul class="about-list">
             <li class="about-list__item">
               <div class="about-list__box">
@@ -591,7 +597,7 @@
           <button type="submit" class="modal-button">Отправить</button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script> -->
+    </div> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
