--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <a href="./index.html" lang="en" class="logo"
           ><span class="logo-color">Web</span>Studio</a
         >
-        <nav class="site-nav">
-          <button type="button" class="nav-btn is-open">
-            <svg width="40px" height="40px" aria-label="mobile menu switch">
-              <use class="icon-cross" href="images/icons.svg#close-cross"></use>
-              <use class="icon-menu" href="images/icons.svg#icon-menu"></use>
-            </svg>
-          </button>
-          <!-- <ul class="nav-list">
+        <button type="button" class="nav-btn" data-menu-button>
+          <svg width="40px" height="40px" aria-label="mobile menu switch">
+            <use class="icon-cross" href="images/icons.svg#close-cross"></use>
+            <use class="icon-menu" href="images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+        <div class="menu-container" id="menu-container" data-menu>
+          <ul class="nav-list">
             <li class="nav-list__item">
               <a
                 href="./index.html"
@@ -45,34 +45,52 @@
               <a href="#" class="nav-list__link link">Контакты</a>
             </li>
           </ul>
-        </nav>
-        <ul class="header-contact">
-          <li class="header-contact__item">
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-contact__link link"
-            >
-              <svg class="header-contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use></svg             >info@devstudio.com
-            </a>
-          </li>
-          <li class="header-contact__item">
-            <a href="tel:+380961111111" class="header-contact__link link">
-              <svg class="header-contact__icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
-            >
-          </li>
-        </ul> -->
+
+          <ul class="header-contact">
+            <li class="header-contact__item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-contact__link link"
+              >
+                <svg class="header-contact__icon" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use></svg                >info@devstudio.com
+              </a>
+            </li>
+            <li class="header-contact__item">
+              <a
+                href="tel:+380961111111"
+                class="header-contact__link header-contact__link--mobile link"
+              >
+                <svg class="header-contact__icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use></svg                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+          <ul class="header-socials">
+            <li class="header-socials__item">
+              <a href="#" class="header-socials__link link">Instagram</a>
+            </li>
+            <li class="header-socials__item">
+              <a href="#" class="header-socials__link link">Twitter</a>
+            </li>
+            <li class="header-socials__item">
+              <a href="#" class="header-socials__link link">Facebook</a>
+            </li>
+            <li class="header-socials__item">
+              <a href="#" class="header-socials__link link">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
       <section class="hero">
-         <div class="hero_active">
+        <div class="hero_active">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero__button button" data-modal-open>
-          Заказать услугу
-        </button>
-            </div>
+          <button type="button" class="hero__button button" data-modal-open>
+            Заказать услугу
+          </button>
+        </div>
       </section>
       <section class="section">
         <div class="container">
@@ -80,7 +98,7 @@
           <ul class="about-list">
             <li class="about-list__item">
               <div class="about-list__box">
-                <svg width="70" height="70" >
+                <svg width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -135,22 +153,34 @@
           <ul class="projects-list">
             <li class="projects-list__item">
               <div class="projects-list__wrap">
-                <img srcset="./images/box1.jpg 1x, ./images/box1-desktop-2x.jpg 2x"
-                src="./images/box1.jpg" alt="markup" width="370" />
+                <img
+                  srcset="./images/box1.jpg 1x, ./images/box1-desktop-2x.jpg 2x"
+                  src="./images/box1.jpg"
+                  alt="markup"
+                  width="370"
+                />
                 <p class="projects-list__imgtext">Десктопные приложения</p>
               </div>
             </li>
             <li class="projects-list__item">
               <div class="projects-list__wrap">
-                <img srcset="./images/box2.jpg 1x, ./images/box2-desktop-2x.jpg 2x" 
-                src="./images/box2.jpg" alt="app design" width="370" />
+                <img
+                  srcset="./images/box2.jpg 1x, ./images/box2-desktop-2x.jpg 2x"
+                  src="./images/box2.jpg"
+                  alt="app design"
+                  width="370"
+                />
                 <p class="projects-list__imgtext">Мобильные приложения</p>
               </div>
             </li>
             <li class="projects-list__item">
               <div class="projects-list__wrap">
-                <img srcset="./images/box3.jpg 1x, ./images/box3-desktop-2x.jpg 2x" 
-                src="./images/box3.jpg" alt="design" width="370" />
+                <img
+                  srcset="./images/box3.jpg 1x, ./images/box3-desktop-2x.jpg 2x"
+                  src="./images/box3.jpg"
+                  alt="design"
+                  width="370"
+                />
                 <p class="projects-list__imgtext">Дизайнерские решения</p>
               </div>
             </li>
@@ -162,11 +192,15 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list__item">
-              <img class="team-list_icon"
-              srcset="./images/demianenko.jpg 1x, ./images/demianenko-desktop-2x.jpg 2x "
+              <img
+                class="team-list_icon"
+                srcset="
+                  ./images/demianenko.jpg            1x,
+                  ./images/demianenko-desktop-2x.jpg 2x
+                "
                 src="./images/demianenko.jpg"
                 alt="Product Designer"
-               />
+              />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Игорь Демьяненко</h3>
                 <p lang="en" class="team-list__text">Product Designer</p>
@@ -215,11 +249,15 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img class="team-list_icon"
-              srcset="./images/repina.jpg 1x, ./images/repina-desktop-2x.jpg 2x "
+              <img
+                class="team-list_icon"
+                srcset="
+                  ./images/repina.jpg            1x,
+                  ./images/repina-desktop-2x.jpg 2x
+                "
                 src="./images/repina.jpg"
                 alt="Frontend Developer"
-                  />
+              />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Ольга Репина</h3>
                 <p lang="en" class="team-list__text">Frontend Developer</p>
@@ -268,11 +306,15 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img class="team-list_icon"
-              srcset="./images/tarasov.jpg 1x, ./images/tarasov-desktop-2x.jpg 2x"
+              <img
+                class="team-list_icon"
+                srcset="
+                  ./images/tarasov.jpg            1x,
+                  ./images/tarasov-desktop-2x.jpg 2x
+                "
                 src="./images/tarasov.jpg"
                 alt="Marketing"
-                              />
+              />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Николай Тарасов</h3>
                 <p lang="en" class="team-list__text">Marketing</p>
@@ -321,11 +363,15 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img class="team-list_icon"
-              srcset="./images/yermakov.jpg 1x, ./images/yermakov-desktop-2x.jpg 2x "
-                src="./images/yermakov.jpg"
+              <img
+                class="team-list_icon"
+                srcset="
+                  ./images/ermakov.jpg 1x,
+                  ./images/ermakov-desktop-2x.jpg 2x
+                "
+                src="./images/ermakov.jpg"
                 alt="UI Designer"
-                  />
+              />
               <div class="team-list__wrap">
                 <h3 class="team-list__title">Михаил Ермаков</h3>
                 <p lang="en" class="team-list__text">UI Designer</p>
@@ -443,7 +489,9 @@
                 >
               </li>
               <li class="footer-contacts__item">
-                <a href="mailto:info@devstudio.com" class="footer-contacts__link link"
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="footer-contacts__link link"
                   >info@devstudio.com</a
                 >
               </li>
@@ -466,14 +514,20 @@
               </a>
             </li>
             <li class="footer-socials__item">
-              <a href="https://twitter.com/?lang=uk" class="footer-socials__link">
+              <a
+                href="https://twitter.com/?lang=uk"
+                class="footer-socials__link"
+              >
                 <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials__item">
-              <a href="https://uk-ua.facebook.com/" class="footer-socials__link">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="footer-socials__link"
+              >
                 <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -507,10 +561,9 @@
         </form>
       </div>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close"
-         data-modal-close>
+        <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close__img" width="18" height="18">
             <use href="./images/icons.svg#close-cross"></use>
           </svg>
@@ -524,7 +577,7 @@
         >
           <div class="modal-form__wrap">
             <label for="user-name" class="modal-form__label">Имя</label>
-            <div class="modal-form__box">
+            <div class="modal-form__wrap">
               <input
                 type="text"
                 name="user-name"
@@ -566,7 +619,9 @@
             </div>
           </div>
           <div class="modal-form__box">
-            <label for="user-comment" class="modal-form__label">Комментарий</label>
+            <label for="user-comment" class="modal-form__label"
+              >Комментарий</label
+            >
             <textarea
               type="text"
               name="user-comment"
@@ -597,7 +652,8 @@
           <button type="submit" class="modal-button">Отправить</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
