--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body>
+  <body id="body">
     <header class="header">
       <div class="container container__header">
-        <a href="./index.html" lang="en" class="logo"
-          ><span class="logo-color">Web</span>Studio</a
+        <a href="./index.html" lang="en" class="logo" id="logo"
+          ><span class="logo-color" id="logo-color">Web</span>Studio</a
         >
         <button type="button" class="nav-btn" data-menu-button>
           <svg width="40px" height="40px" aria-label="mobile menu switch">
