--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="#" class="nav-list__link link">Контакты</a>
             </li>
           </ul>
-
+<div>
           <ul class="header-contact">
             <li class="header-contact__item">
               <a
@@ -80,6 +80,7 @@
               <a href="#" class="header-socials__link link">LinkedIn</a>
             </li>
           </ul>
+          </div>
         </div>
       </div>
     </header>
